--- a/app/components/map/search.component.html
+++ b/app/components/map/search.component.html
@@ -1,1 +1,4 @@
-<input id="pac-input" class="controls" type="text" placeholder="Vyhledat místo">
+<!--STANDARD-->
+<input id="pac-input" class="controls" type="text" placeholder="Vyhledat místo" *hideItDevice="['mobile']">
+<!--MOBILE-->
+<input id="pac-input-M" class="controls" type="text" placeholder="Vyhledat místo" *showItDevice="['mobile']">
