test komponenty vyberu vrstev

--- a/app/components/statistics/senzor.menu.component.html
+++ b/app/components/statistics/senzor.menu.component.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div id="buttons" *showItDevice="['mobile']">
+<div id="buttons-M" *showItDevice="['mobile']">
     <!--<div id="combo">-->
         <ul class="nav navbar-nav" id="navBar-M">
             <li class="dropdown" dropdown>
