--- a/app/components/map/search.component.css
+++ b/app/components/map/search.component.css
@@ -18,6 +18,7 @@
   padding: 0 1px 0 8px;
   text-overflow: ellipsis;
   opacity: 0.95;
+  width: 190px;
 }
 
 .pac-container {
@@ -36,10 +37,6 @@
   font-weight: 300;
 }
 
-#target {
-  width: 250px;
-}
-
 #pac-input-M {
   padding-top: 13px;
   padding-bottom: 11px;
@@ -52,4 +49,5 @@
   font-weight: 300;
   padding: 0 1px 0 8px;
   text-overflow: ellipsis;
+  width: 47%;
 }
