--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -1,17 +1,23 @@
+#buttons-M {
+  width: 38px;
+  margin-top: -45px;
+  margin-left: 220px;
+  z-index: 16;
+}
+
 #navBar-M {
   width: 38px;
-  height: 38px;
-  position: relative !important;
-  margin-top: -45px;
-  margin-left: 195px;
-  z-index: 18;
+  height: 38px; 
 }
 
 #menu-button-M {
-  height: 37px;
-  padding-left: 3px;
-  padding-top: 3px;
-  position: relative !important;
+  width: 38px;
+  height: 38px;
+}
+
+#menu-button-M > img {
+  margin-top: -6px;
+  margin-left: -13px;
 }
 
 #navBar-M > li > ul {
