--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -1,4 +1,4 @@
-<!------------------------------------------------------- DESKTOP, TABLET, SMART TV -------------------------------------------------------->
+<!--STANDARD-->
 <div id="overlaysSearchId" class="overlaysSearchStandard" *hideItDevice="['mobile']">
     <logo></logo>
     <div class="overlaysSearch">
@@ -7,23 +7,17 @@
         <search></search>
     </div>
 </div>
-<!------------------------------------------------------- MOBILE ------------------------------------------------------->
+<!--MOBILE-->
 <div id="overlaysSearchId" class="overlaysSearchMobile" *showItDevice="['mobile']">
-    <!--<div class="mobileTop">-->
+    <div class="mobileTop">
         <span class="upperBar">
-            <span class="layerButton">
-              <overlays-menu></overlays-menu>
-            </span>   
-            <span class="separatorM-1"></span>
-            <span class="searchBar">
-                <search></search>
-            </span>
-            <span class="separatorM-2"></span>
-            <span class="senzorButton">
-              <senzor-menu></senzor-menu>
-            </span>
+            <overlays-menu></overlays-menu>   
+            <span class="separator"></span>
+            <search></search>
+            <span class="separator"></span>
+            <senzor-menu></senzor-menu>
         </span>
-    <!--</div>-->
+    </div>
     <div class="logo">
         <logo></logo>
     </div>
