--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -1,3 +1,50 @@
+/*STANDARD*/
+.navbar {
+  margin:10px;
+}
+
+.bold-sensor {
+  font-weight: bold;
+}
+
+.red-sensor {
+  color: red !important;
+}
+
+.gray-sensor{
+  color: gray;
+}
+#combo{
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-size: 14px; 
+}
+
+#buttons{
+  width:  590px;
+  height: 50px;
+  background-color: white;
+  margin-top: 24px;
+  margin-right: 10px;
+  margin-bottom: 8px;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+
+  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+}
+
+.statisButton{
+  margin-top: 5px;
+  margin-left: 435px;
+  margin-top: -39px;
+  margin-left: 540px;
+}
+
+
+/*MOBILE*/
 #buttons-M {
   width: 38px;
   margin-top: -45px;
