nastrel rozdeleni statistickych komponent

--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -3,6 +3,7 @@
 		<map></map>
 		<overlays-search></overlays-search>
 		<slider></slider>
+		<senzor-menu></senzor-menu>
 		<statistics></statistics>
 	</div>
 	
