--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -11,22 +11,24 @@
   color: red !important;
 }
 
-.gray-sensor{
+.gray-sensor {
   color: gray;
 }
-#combo{
+
+#combo {
   padding-top: 0px;
   padding-bottom: 0px;
   font-size: 14px; 
 }
 
-#buttons{
-  width:  590px;
-  height: 50px;
-  background-color: white;
-  margin-top: 24px;
-  margin-right: 10px;
-  margin-bottom: 8px;
+.buttons {
+  margin-right: 230;
+  margin-top: 20px;
+  width: 160px;
+  height: 38px;
+}
+
+#senzorMenuId > ul {
   border-radius: 4px 4px 4px 4px;
   -moz-border-radius: 4px 4px 4px 4px;
   -webkit-border-radius: 4px 4px 4px 4px;
@@ -34,9 +36,43 @@
   -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
   box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.19);
+  background-color: white;
+  height: 38px;
 }
 
-.statisButton{
+#senzorMenuId > ul > li {
+  width: 172px;
+  height: 38px;
+}
+
+#senzorMenuId > ul > li > a {
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  width: 172px;
+  height: 38px;
+  padding-top: 7px;
+  text-align: center;
+  font-size: 14px;
+  background-color: white;
+  font-family: Roboto,Arial,sans-serif;
+}
+
+#senzorMenuId > ul > li > a > img {
+  position: relative;
+  margin-left: -15px;
+  margin-top: -3px;
+}
+
+#senzorListArrow {
+  margin-left: 3px;
+}
+
+#senzorMenuId > ul > li > a > a {
+  margin-left: 7px;
+}
+
+.statisButton {
   margin-top: 5px;
   margin-left: 435px;
   margin-top: -39px;
@@ -45,7 +81,7 @@
 
 
 /*MOBILE*/
-#buttons-M {
+.buttons-M {
   width: 38px;
   margin-top: -45px;
   margin-left: 220px;
@@ -60,11 +96,14 @@
 #menu-button-M {
   width: 38px;
   height: 38px;
+  margin-top: -23px;
+  position: relative;
 }
 
 #menu-button-M > img {
   margin-top: -6px;
   margin-left: -13px;
+  position: relative;
 }
 
 #navBar-M > li > ul {
