--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<!--<div class="container-fluid">
 	<div class="row">
 		<map></map>
 		<overlays-search></overlays-search>
@@ -8,6 +8,6 @@
 	</div>
 	
 
-</div>
+</div>-->
 <!--<test></test>-->
-<!--<tabs-test></tabs-test>-->
+<tabs-test></tabs-test>
