--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -1,4 +1,4 @@
-<div id="overlaysMenuId" *hideItDevice="['mobile']">
+<div id="overlaysMenuId" class="overlaysMenu" *hideItDevice="['mobile']">
   <ul class="nav navbar-nav">
     <li class="dropdown" dropdown>
       <a class="dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -36,7 +36,7 @@
   </ul>
 </div>
 
-<div id="overlaysMenuId-M" *showItDevice="['mobile']">
+<div id="overlaysMenuId" class="overlaysMenu-M" *showItDevice="['mobile']">
   <ul class="nav navbar-nav" id="nav-bar-M">
     <li class="dropdown" dropdown>
       <a class="dropdown dropdown-toggle" dropdown-open data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
