--- a/app/components/map/search.component.css
+++ b/app/components/map/search.component.css
@@ -38,7 +38,7 @@
 }
 
 #pac-input-M {
-  padding-top: 13px;
+  /*padding-top: 13px;
   padding-bottom: 11px;
   top: 0px;
   margin-left: 38px;
@@ -49,5 +49,16 @@
   font-weight: 300;
   padding: 0 1px 0 8px;
   text-overflow: ellipsis;
-  width: 47%;
+  width: 47%;*/
+  margin-left: 38px;
+  top: -34px;
+  position: relative;
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 300;
+  padding: 0 1px 0 8px;
+  text-overflow: ellipsis;
+  width: 45%;
+  height: 34px;
 }
