--- a/app/components/statistics/senzor.menu.component.css
+++ b/app/components/statistics/senzor.menu.component.css
@@ -87,26 +87,34 @@
 
 /*MOBILE*/
 .buttons-M {
-  width: 38px;
   height: 38px;
   position: absolute;
   top: -8px;
-  left: 222px;
-  z-index: 10 !important;
+  width: 100%;
+  background-color: white;
+  /*z-index: 10 !important;*/
 }
 
 #menu-button-M {
   width: 38px;
   height: 38px; 
-  z-index: 15 !important;
+  margin-left: 218px;
+  margin-top: -8px;
+  /*z-index: 15 !important;*/
 }
 
-#menu-button-M > img {
+.senzorListIco-M {
   margin-top: -6px;
   margin-left: -12px;
 }
 
 #navBar-M > li > ul {
+  margin-left: -40px;
+  width: 193px;
+  margin-top: -1px;
+  text-align: center;
+  font-size: 16px;
   background-color: white;
+  font-family: Roboto,Arial,sans-serif;
 }
 
