--- a/app/components/map/overlays.search.component.html
+++ b/app/components/map/overlays.search.component.html
@@ -12,9 +12,9 @@
     <div class="mobileTop">
         <span class="upperBar">
             <overlays-menu></overlays-menu>   
-            <span class="separator"></span>
+            <span class="separator-M"></span>
             <search></search>
-            <span class="separator"></span>
+            <span class="separator-M"></span>
         </span>
     </div>
     <div class="logo">
