--- a/app/components/map/logo.component.css
+++ b/app/components/map/logo.component.css
@@ -1,20 +1,38 @@
 .logoImage {
-    z-index: 8 !important;
-    height: 22px;
-    position: relative;
-    top: 24px;
-    left: 15px;
-    /*opacity: 0.95;*/
+  z-index: 8 !important;
+  height: 22px;
+  position: relative;
+  top: 24px;
+  left: 15px;
 
-    border-radius: 6px 6px 0px 0px;
-    -moz-border-radius: 6px 6px 0px 0px;
-    -webkit-border-radius: 6px 6px 0px 0px;
-    border: 0px solid #000000;
+  border-radius: 6px 6px 0px 0px;
+  -moz-border-radius: 6px 6px 0px 0px;
+  -webkit-border-radius: 6px 6px 0px 0px;
+  border: 0px solid #000000;
 
-    -webkit-box-shadow: 0px 0px 10px 4px white;
-    -moz-box-shadow: 0px 0px 10px 4px white;
-    box-shadow: 0px 0px 10px 4px white; 
+  -webkit-box-shadow: 0px 0px 10px 4px white;
+  -moz-box-shadow: 0px 0px 10px 4px white;
+  box-shadow: 0px 0px 10px 4px white; 
 
-    background-color: white;
+  background-color: white;
 }
 
+.logoImage-M {
+  z-index: -1;
+  height: 19px;
+  position: relative;
+  top: 8px;
+  left: 0.5;
+  opacity: 0.96;
+
+  border-radius: 6px 6px 0px 0px;
+  -moz-border-radius: 6px 6px 0px 0px;
+  -webkit-border-radius: 6px 6px 0px 0px;
+  border: 0px solid #000000;
+
+  -webkit-box-shadow: 0px 0px 10px 4px white;
+  -moz-box-shadow: 0px 0px 10px 4px white;
+  box-shadow: 0px 0px 10px 4px white; 
+
+  background-color: white;
+}  
