vypocet statistik upraven

--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,5 +1,5 @@
 <div id="statis">
-    <table-statis #myTable [devEUI]="devEUI" [data]="barChartData[0].data" [labels]="barTableLabels"></table-statis>
+    <table-statis [statisType]="0"></table-statis>
     <chart [statisType]="0"></chart>    
     <div class="slider3" >
         <input id="{{statisId}}" style="display: none; width: 510px;"/>
