--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -31,8 +31,14 @@
 #layerNavBar {
   position: fixed !important;
   z-index: 10 !important;
+  /*padding: 0px !important;*/
   width: 38px;
   height: 38px;
+}
+
+.navbar-nav {
+  padding: 0px !important;
+  margin: 0px !important;
 }
 
 #layerDropDown {
@@ -106,7 +112,7 @@ span.layerSpanBox {
   overflow-y: auto; 
   max-height: 425px; 
   overflow-x: auto;
-  max-width: 180px; 
+  max-width: 220px; 
 }
 
 /*MOBILE VERSION*/
@@ -134,7 +140,7 @@ span.layerSpanBox {
   font-family: Roboto,Arial,sans-serif;
   font-size: 16px;
   background-color: white;
-  width: 208px;
+  width: 210px;
   margin-top: -1px;
 }
 
@@ -150,4 +156,8 @@ span.layerSpanBox {
 
 #nav-bar-M > li {
   height: 36px;
+}
+
+.groupItem-M {
+  margin-left: -17px;
 }
