--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -127,16 +127,20 @@ span.layerSpanBox {
   padding: 0px;
 }
 
+.layerMenuIco-M {
+  margin-left: 2px;
+  margin-top: 3px;
+}
+
 #nav-bar-M {
   width: 60%;
 }
 
 #overlayGroup-M > li > a > span {
- margin-left: 5px;
+  margin-left: 5px;
 }
 
 #overlayGroup-M {
-  margin-left: 15px;
   font-family: Roboto,Arial,sans-serif;
   font-size: 16px;
   background-color: white;
@@ -145,7 +149,7 @@ span.layerSpanBox {
 }
 
 #nav-bar-M > li > a {
-  margin-left: 15px;
+  margin-left: 0px;
   margin-top: 6px;
 }
 
