--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -1,3 +1,7 @@
+#overlaysMenuId {
+  z-index: 25 !important;
+}
+
 /*STANDARD VERSION*/
 .overlaysMenu {
   position: relative;
@@ -6,6 +10,7 @@
 }
 
 .overlayGroup {
+  z-index: 15 !important;
   position: relative;
   font-family: Roboto,Arial,sans-serif;
   font-size: 11px;
@@ -30,7 +35,7 @@
 
 #layerNavBar {
   position: fixed !important;
-  z-index: 10 !important;
+  z-index: 15 !important;
   /*padding: 0px !important;*/
   width: 38px;
   height: 38px;
