--- a/app/components/map/base.map.legend.component.css
+++ b/app/components/map/base.map.legend.component.css
@@ -29,11 +29,6 @@
   margin-bottom: 5px;
 }
 
-#baseMapLegendId > div > div > ul > li > a {
-  background-color: transparent;
-  padding-bottom: 0px;
-}
-
 .mobile > legend-vertical  > ul > li > a {
   top: 40px;
   padding-left: 11px;
@@ -72,6 +67,12 @@
   border-top: 0px;
   margin: 3px;
   padding: 0px;
+}
+
+#legendButton {
+  margin-left: 4px;
+  padding-bottom: 0px;
+  background-color: transparent;
 }
 
 .mobile > div > ul > li > #LegendGroupHorizontal {
