--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -17,7 +17,7 @@
                 <span class="layerSpanBox">
                   <input type="checkbox" class="layerChBox" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
                 </span>
-              <span class="layerText" tooltip={{overlay.tooltip}} tooltipPopupDelay="1500" tooltipPlacement="right" tooltipClass="tooltip-layer-component">{{overlay.text}}</span>
+                <span class="layerText">{{overlay.text}}</span>
               </span>
               <!-- Internet Explorer -->
               <span *showItBrowser="['ie']">
@@ -26,10 +26,16 @@
                 <span class="layerSpanBoxIE">
                   <input type="checkbox" class="layerChBoxIE" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
                 </span>
-              <span class="layerTextIE">{{overlay.text}}</span>
+                <span class="layerTextIE">{{overlay.text}}</span>
               </span>
               </span>
             </a>
+          </li>
+          <li class="layerLegend">
+             <span class="layerTextLegend">
+               <p>Ln = Hlukový indikátor pro noc</p>
+               <p>Ldvn = Hlukový indikátor pro den, večer a noc</p>
+             </span>
           </li>
         </ul>
     </li>
@@ -55,7 +61,7 @@
                 <span class="layerSpanBox-M">
                   <input type="checkbox" class="layerChBox-M" [(ngModel)]="overlay.checked" value={{overlay.value}} (ngModelChange)="onChkboxClick(overlay)"/>
                 </span>
-              <span class="layerText-M" tooltip={{overlay.tooltip}} tooltipPopupDelay="1500" tooltipPlacement="right" tooltipClass="tooltip-layer-component">{{overlay.text}}</span>
+                <span class="layerText">{{overlay.text}}</span>
               </span>
               <!-- Internet Explorer -->
               <span *showItBrowser="['ie']">
@@ -68,6 +74,12 @@
               </span>
               </span>
             </a>
+          </li>
+          <li class="layerLegend">
+             <span class="layerTextLegend-M">
+               <p>Ln = Hlukový indikátor pro noc</p>
+               <p>Ldvn = Hlukový indikátor pro den, večer a noc</p>
+             </span>
           </li>
         </ul>
     </li>
