--- a/app/components/statistics/statis.component.html
+++ b/app/components/statistics/statis.component.html
@@ -1,7 +1,8 @@
 <div id="statis">
-    <table-statis [statisType]="0"></table-statis>
-    <chart [statisType]="0"></chart>    
-    <div class="slider3" >
+    <table-statis [statisType]="statisType2"></table-statis>
+    <chart [statisType]="statisType2"></chart>   
+    <slider-statis></slider-statis> 
+    <!--<div class="slider3" >
         <input id="{{statisId}}" style="display: none; width: 510px;"/>
-    </div>
+    </div>-->
 </div>
