--- a/app/components/app.component.html
+++ b/app/components/app.component.html
@@ -5,6 +5,8 @@
 		<slider></slider>
 		<senzor-menu></senzor-menu>
 		<statistics></statistics>
+		<base-map-legend></base-map-legend>
+		<about-app></about-app>
 	</div>
 	
 
