--- a/app/components/map/overlays.menu.component.css
+++ b/app/components/map/overlays.menu.component.css
@@ -12,7 +12,7 @@
   font-size: 11px;
   opacity: .94;
   padding-bottom: 5px;
-  width: 178px;
+  width: 232px;
 }
 
 #imageBox {
@@ -23,8 +23,6 @@
 
 .layerMenuIco {
   position: relative;
-  /*padding-top: 3px;
-  padding-left: 3px;*/
   margin-top: -12px;
   margin-left: -12px;
 }
@@ -32,7 +30,6 @@
 #layerNavBar {
   position: fixed !important;
   z-index: 15 !important;
-  /*padding: 0px !important;*/
   width: 38px;
   height: 38px;
 }
@@ -63,7 +60,7 @@
 }
 
 .layerChBoxIE {
-  margin-top: 3px !important;
+  margin-top: 2px !important;
 }
 
 span.layerHeader {
@@ -107,7 +104,7 @@ span.layerSpanBox {
 
 .groupItem {
   height: 20px;
-  margin-left: -24px;
+  margin-left: -15px;
 }
 
 .groupItemSpan {
@@ -117,9 +114,9 @@ span.layerSpanBox {
 
 .dropdown-menu {
   overflow-y: auto; 
-  max-height: 425px; 
+  max-height: 500px; 
   overflow-x: auto;
-  max-width: 220px; 
+  max-width: 250px;
 }
 
 .layerTextLegend {
@@ -129,6 +126,19 @@ span.layerSpanBox {
   font-size: 10px;
   color: silver;
 }
+
+.layerLegend {
+  border-right: 0px;
+  border-left: 0px;
+  border-bottom: 0px;
+  border-top: 1px lightgray;
+  border-style: solid;
+  width: 100%;
+  position: relative;
+  padding-left: 7px;
+  padding-top: 4px;
+}
+
 
 /*MOBILE VERSION*/
 .overlaysMenu-M {
@@ -155,12 +165,18 @@ span.layerSpanBox {
   margin-left: 5px;
 }
 
+.position-M {
+  position: relative;
+  top: -2px;
+}
+
 #overlayGroup-M {
   font-family: Roboto,Arial,sans-serif;
   font-size: 16px;
   background-color: white;
   width: 210px;
   margin-top: -1px;
+  height: 480px;
 }
 
 #nav-bar-M > li > a {
@@ -168,7 +184,7 @@ span.layerSpanBox {
   margin-top: 6px;
 }
 
-#overlayGroup-M > li > span {
+.layerHeader-M {
   font-weight: 600;
   margin-left: 10px;
 }
@@ -178,7 +194,9 @@ span.layerSpanBox {
 }
 
 .groupItem-M {
-  margin-left: -17px;
+  line-height: 14px;
+  margin-left: -19px;
+  width: 100%;
 }
 
 .layerTextLegend-M {
