--- a/app/components/map/overlays.menu.component.html
+++ b/app/components/map/overlays.menu.component.html
@@ -33,8 +33,8 @@
           </li>
           <li class="layerLegend">
              <span class="layerTextLegend">
-               <p>Ln = Hlukový indikátor pro noc</p>
-               <p>Ldvn = Hlukový indikátor pro den, večer a noc</p>
+               Ln = Hlukový indikátor pro noc<br>
+               Ldvn = Hlukový indikátor pro den, večer a noc
              </span>
           </li>
         </ul>
@@ -76,9 +76,8 @@
             </a>
           </li>
           <li class="layerLegend">
-             <span class="layerTextLegend-M">
-               <p>Ln = Hlukový indikátor pro noc</p>
-               <p>Ldvn = Hlukový indikátor pro den, večer a noc</p>
+             <span class="layerTextLegend">
+               Ln = Hlukový indikátor pro noc<br>Ldvn = Hlukový indikátor pro den, večer a noc
              </span>
           </li>
         </ul>
