--- a/app/components/map.component.css
+++ b/app/components/map.component.css
@@ -7,6 +7,18 @@
 #loadingOnMap{
     margin-top: 20px;
 }
+
+.point-statis-table {
+    font-size: 11px;
+    font-weight: 400;
+    /* margin-bottom: 46px !important; */
+    /*margin-left: 40px;*/
+    /*margin-top: -64px;*/
+
+    font-family: Roboto,Arial,sans-serif;
+    /*font-size: 11px;*/
+    /*font-weight: 400;*/
+}
   /*#floating-panel {
     position: absolute;
     top: 10px;
